--- a/src/main/resources/templates/new_conference.html
+++ b/src/main/resources/templates/new_conference.html
@@ -6,9 +6,8 @@
 </head>
 <body>
 <h1>Form</h1>
-<form action="#" th:action="@{/greeting}" th:object="${greeting}" method="post">
-    <p>Id: <input type="text" th:field="*{id}"/></p>
-    <p>Message: <input type="text" th:field="*{content}"/></p>
+<form action="#" th:action="@{/conference}" th:object="${conference}" method="post">
+    <p>Participants: <input type="text" th:field="*{participantsEmails}"/></p>
     <p><input type="submit" value="Submit"/> <input type="reset" value="Reset"/></p>
 </form>
 </body>
