--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -6,8 +6,7 @@
 </head>
 <body>
 <h1>Result</h1>
-<p th:text="'id: ' + ${greeting.id}"/>
-<p th:text="'content: ' + ${greeting.content}"/>
-<a href="/greeting">Submit another message</a>
+<p th:text="'content: ' + ${conference.participantsEmails}"/>
+<a href="/conference">Submit another conference</a>
 </body>
 </html>
