Fix endpoint in html pages

--- a/src/main/resources/templates/new_conference_submitted.html
+++ b/src/main/resources/templates/new_conference_submitted.html
@@ -9,6 +9,6 @@
 <ul>
     <li th:each="item : ${linkedParticipants}" th:text="${item}">Item description here...</li>
 </ul>
-<a href="/conference">Submit another conference</a>
+<a href="/new_conference">Submit another conference</a>
 </body>
 </html>
