--- a/src/main/resources/templates/new_conference_submission.html
+++ b/src/main/resources/templates/new_conference_submission.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Form</h1>
-<form action="#" th:action="@{/conference}" th:object="${conference}" method="post">
+<form action="#" th:action="@{/new_conference}" th:object="${conference}" method="post">
     <p>Participants: <input type="text" th:field="*{participantsEmails}"/></p>
     <p><input type="submit" value="Submit"/> <input type="reset" value="Reset"/></p>
 </form>
