--- a/src/main/resources/templates/new_conference_submitted.html
+++ b/src/main/resources/templates/new_conference_submitted.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Getting started: Handling form submission</title>
+    <title>Conference created</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
 </head>
 <body>
