Add security layer

--- a/src/main/resources/templates/conference_list.html
+++ b/src/main/resources/templates/conference_list.html
@@ -9,5 +9,10 @@
 <ul>
     <li th:each="item : ${conferenceList}" th:text="${item.id}">Item description here...</li>
 </ul>
+<div>
+    <form th:action="@{/logout}" method="post">
+        <input type="submit" value="Sign Out"/>
+    </form>
+</div>
 </body>
 </html>
