Redirect to particular conference using path param

--- a/src/main/resources/templates/conference_list.html
+++ b/src/main/resources/templates/conference_list.html
@@ -8,7 +8,7 @@
 <h1>Result</h1>
 <ul>
     <li th:each="item : ${conferenceList}">
-        <a th:href="@{/conference?id={id}(id=${item.id})}" th:text="${item.id}">Item desc</a>
+        <a th:href="@{/conferences/{id}(id=${item.id})}" th:text="${item.id}">Item desc</a>
     </li>
 </ul>
 <div>
